infrastructure/config/taiga/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: taiga
  labels:
    app.kubernetes.io/name: taiga
