infrastructure/config/taiga/taiga-async.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-async
  namespace: taiga
  labels:
    app.kubernetes.io/name: taiga
    app.kubernetes.io/component: async
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: taiga
      app.kubernetes.io/component: async
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taiga
        app.kubernetes.io/component: async
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: taiga-async
          image: taigaio/taiga-back:6.9.0
          command:
            - /taiga-back/docker/async_entrypoint.sh
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 768Mi
          volumeMounts:
            - name: media
              mountPath: /taiga-back/media
            - name: static
              mountPath: /taiga-back/static
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: taiga-media-rwx
        - name: static
          persistentVolumeClaim:
            claimName: taiga-static-rwx
