infrastructure/config/taiga/taiga-events.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-events
  namespace: taiga
  labels:
    app.kubernetes.io/name: taiga
    app.kubernetes.io/component: events
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: taiga
    app.kubernetes.io/component: events
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-events
  namespace: taiga
  labels:
    app.kubernetes.io/name: taiga
    app.kubernetes.io/component: events
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: taiga
      app.kubernetes.io/component: events
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taiga
        app.kubernetes.io/component: events
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: taiga-events
          image: taigaio/taiga-events:6.9.0
          ports:
            - containerPort: 8888
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
