infrastructure/config/taiga/taiga-front.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-front
  namespace: taiga
  labels:
    app.kubernetes.io/name: taiga
    app.kubernetes.io/component: front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: taiga
    app.kubernetes.io/component: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-front
  namespace: taiga
  labels:
    app.kubernetes.io/name: taiga
    app.kubernetes.io/component: front
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: taiga
      app.kubernetes.io/component: front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taiga
        app.kubernetes.io/component: front
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: taiga-front
          image: taigaio/taiga-front:6.9.0
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/conf.json
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: taiga-front-config
